force-app/main/default/objects/Assessment_Stage_Definition__c/Assessment_Stage_Definition__c.object-meta.xml
<CustomObject>
    <description>Defines an application stage for which assessments are needed. All assessments selected for this stage will be added to any application reaching the stage (within the applicable Fund)</description>
    <label>Assessment Stage Definition</label>
    <nameField>
        <label>Assessment Stage Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment Stage Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>