force-app/main/default/objects/Assessment_Stage_Definition__c/fields/Application_Assessment_Stage__c.field-meta.xml
<CustomField>
    <fullName>Application_Assessment_Stage__c</fullName>
    <description>(optional) The Application Assessment Stage in which this set of assessment criteria becomes applicable. If not filled in, only the Application Stage is considered.</description>
    <inlineHelpText>(optional) The Application Assessment Stage in which this set of assessment criteria becomes applicable. If not filled in, only the Application Stage is considered.</inlineHelpText>
    <label>Application Assessment Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>