force-app/main/default/objects/Assessment_Stage_Definition__c/fields/Application_Stage__c.field-meta.xml
<CustomField>
    <fullName>Application_Stage__c</fullName>
    <description>The Application Stage for which assessments should be generated.</description>
    <inlineHelpText>The Application Stage for which assessments should be generated.</inlineHelpText>
    <label>Application Stage</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>