force-app/main/default/objects/Assessment_Stage_Definition__c/fields/Assessors__c.field-meta.xml
<CustomField>
    <fullName>Assessors__c</fullName>
    <description>Defines how the assessors for the assessments for this stage will be allocated.</description>
    <inlineHelpText>Defines how the assessors for the assessments for this stage will be allocated.</inlineHelpText>
    <label>Assessors</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All fund assessors</fullName>
            </value>
            <value>
                <fullName>Random fund assessor</fullName>
            </value>
            <value>
                <fullName>Manual selection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>