force-app/main/default/objects/Assessment_Stage_Definition__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The fund to which this assessment definition is applicable</description>
    <inlineHelpText>The fund to which this assessment definition is applicable</inlineHelpText>
    <label>Fund</label>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>Assessment Stage Definitions</relationshipLabel>
    <relationshipName>Assessment_Stage_Definitions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>