force-app/main/default/objects/Assessment_Stage_Definition__c/fields/Number_of_Assessments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Assessments__c</fullName>
    <description>For assessors of type &#39;Random fund assessor&#39; and &#39;Manual selection&#39; specify the total number of assessments to be created here.</description>
    <inlineHelpText>For assessors of type &#39;Random fund assessor&#39; and &#39;Manual selection&#39; specify the total number of assessments to be created here.</inlineHelpText>
    <label>Number of Assessments</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>